pdf spacing error fixed

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -38,6 +38,10 @@
   text-align: center;
 }
 
+.b{
+  margin-bottom: ($spacer * 3) !important;
+}
+
 @media (max-width: 768px) {
     #sidebar {
         margin-left: -250px;
